# locally

./: .gitignore  README.md  config.toml  pyproject.toml  revenueForecast.command
scripts/: start_models.sh  stop_models.sh
src/: config.py  dashboard.py  desktop.py  export.py  normalize.py  ocr.py  pipeline.py  render.py  store.py  structure.py
tests/: test_normalize.py  test_pipeline.py  test_store.py
